--- a/jvm/src/main/resources/application.conf
+++ b/jvm/src/main/resources/application.conf
@@ -1,4 +1,21 @@
 akka {
+
+  actor {
+    serializers {
+      crawler-response = "crawler.serializer.CrawlerResponseSerializer"
+      change-set-event = "domain.serializer.ChangeSetEventSerializer"
+      result-added-event = "domain.serializer.ResultAddedEventSerializer"
+      campaign-persisted-event = "domain.serializer.CampaignPersistedSerializer"
+    }
+
+    serialization-bindings {
+      "crawler.writer.CrawlerGuardian$CrawlerResponse" = crawler-response
+      "domain.update.DomainWriter$BeginTransaction" = change-set-event
+      "domain.TeamAggregate$ResultAdded" = result-added-event
+      "domain.CrawlerCampaign$CampaignPersistedEvent" = campaign-persisted-event
+    }
+  }
+
   loglevel = INFO
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
