Add serializer classes

--- a/jvm/src/main/resources/application.conf
+++ b/jvm/src/main/resources/application.conf
@@ -2,10 +2,10 @@ akka {
 
   actor {
     serializers {
-      crawler-response = "crawler.serializer.CrawlerResponseSerializer"
-      change-set-event = "domain.serializer.ChangeSetEventSerializer"
-      result-added-event = "domain.serializer.ResultAddedEventSerializer"
-      campaign-persisted-event = "domain.serializer.CampaignPersistedSerializer"
+      crawler-response = "com.boldradius.clusterconsole.serializer.CrawlerResponseSerializer"
+      change-set-event = "com.boldradius.clusterconsole.serializer.ChangeSetEventSerializer"
+      result-added-event = "com.boldradius.clusterconsole.serializer.ResultAddedEventSerializer"
+      campaign-persisted-event = "com.boldradius.clusterconsole.serializer.CampaignPersistedSerializer"
     }
 
     serialization-bindings {
