--- a/jvm/src/main/resources/application.conf
+++ b/jvm/src/main/resources/application.conf
@@ -4,15 +4,15 @@ akka {
     serializers {
       crawler-response = "com.boldradius.clusterconsole.serializer.CrawlerResponseSerializer"
       change-set-event = "com.boldradius.clusterconsole.serializer.ChangeSetEventSerializer"
-      result-added-event = "com.boldradius.clusterconsole.serializer.ResultAddedEventSerializer"
-      campaign-persisted-event = "com.boldradius.clusterconsole.serializer.CampaignPersistedSerializer"
+      #result-added-event = "com.boldradius.clusterconsole.serializer.ResultAddedEventSerializer"
+      #campaign-persisted-event = "com.boldradius.clusterconsole.serializer.CampaignPersistedSerializer"
     }
 
     serialization-bindings {
       "crawler.writer.CrawlerGuardian$CrawlerResponse" = crawler-response
       "domain.update.DomainWriter$BeginTransaction" = change-set-event
-      "domain.TeamAggregate$ResultAdded" = result-added-event
-      "domain.CrawlerCampaign$CampaignPersistedEvent" = campaign-persisted-event
+      #"domain.TeamAggregate$ResultAdded" = result-added-event
+      #"domain.CrawlerCampaign$CampaignPersistedEvent" = campaign-persisted-event
     }
   }
 
